Préparation du cours 4

--- a/docs/css/variables.css
+++ b/docs/css/variables.css
@@ -107,7 +107,7 @@
 
     --links: #20609f;
 
-    --inline-code-color: #301900;
+    --inline-code-color: #f8f8f2;
 
     --theme-popup-bg: #fafafa;
     --theme-popup-border: #cccccc;
